again commit by Makar

--- a/movies_app/templates/index.html
+++ b/movies_app/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
-    <title>Кинопоисковик</title>
+    <title>{{title}}</title>
 
     <!-- Loading third party fonts -->
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
@@ -29,7 +29,7 @@
             <a href="/" id="branding">
                 <img src="../static/images/logo.png" alt="" class="logo">
                 <div class="logo-copy">
-                    <h1 class="site-title">Кинопоисковик</h1>
+                    <h1 class="site-title">{{title}}</h1>
                     <small class="site-description">by 231-363/364</small>
                 </div>
             </a> <!-- #branding -->
@@ -39,7 +39,7 @@
                 <ul class="menu">
                     <li class="menu-item current-menu-item"><a href="/">Главная</a></li>
                     <li class="menu-item"><a href="/about">О нас</a></li>
-                    <li class="menu-item"><a href="/review">Фильмы</a></li>
+                    <li class="menu-item"><a href="/review/?genre=any&country=any&page=0">Фильмы</a></li>
                     <li class="menu-item"><a href="/joinus">Присоединится к нам</a></li>
                     <li class="menu-item"><a href="/contact">Контакты</a></li>
                 </ul> <!-- .menu -->
