--- a/movies_app/templates/review.html
+++ b/movies_app/templates/review.html
@@ -1,133 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
-		
-		<title>Movie Review | Review</title>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
-		<!-- Loading third party fonts -->
-		<link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
-		<link href="../static/fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <title>{{title}} | Фильмы</title>
 
-		<!-- Loading main css file -->
-		<link rel="stylesheet" href="../static/style.css">
-		
-		<!--[if lt IE 9]>
-		<script src="../static/js/ie-support/html5.js"></script>
-		<script src="../static/js/ie-support/respond.js"></script>
-		<![endif]-->
+    <!-- Loading third party fonts -->
+    <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
+    <link href="../static/fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-	</head>
+    <!-- Loading main css file -->
+    <link rel="stylesheet" href="../static/style.css">
+
+    <!--[if lt IE 9]>
+    <script src="../static/js/ie-support/html5.js"></script>
+    <script src="../static/js/ie-support/respond.js"></script>
+    <![endif]-->
+
+</head>
 
 
-	<body>
-		
+<body>
 
-		<div id="site-content">
-			<header class="site-header">
-				<div class="container">
-					<a href="/" id="branding">
-						<img src="../static/images/logo.png" alt="" class="logo">
-						<div class="logo-copy">
-							<h1 class="site-title">Company Name</h1>
-							<small class="site-description">Tagline goes here</small>
-						</div>
-					</a> <!-- #branding -->
 
-					<div class="main-navigation">
-						<button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
-						<ul class="menu">
-							<li class="menu-item"><a href="/">Home</a></li>
-							<li class="menu-item"><a href="/about">About</a></li>
-							<li class="menu-item current-menu-item"><a href="/review">Movie reviews</a></li>
-							<li class="menu-item"><a href="/joinus">Join us</a></li>
-							<li class="menu-item"><a href="/contact">Contact</a></li>
-						</ul> <!-- .menu -->
+<div id="site-content">
+    <header class="site-header">
+        <div class="container">
+            <a href="/" id="branding">
+                <img src="../static/images/logo.png" alt="" class="logo">
+                <div class="logo-copy">
+                    <h1 class="site-title">{{title}}</h1>
+                    <small class="site-description">by 231-363/364</small>
+                </div>
+            </a> <!-- #branding -->
 
-						<form action="#" class="search-form">
-							<input type="text" placeholder="Search...">
-							<button><i class="fa fa-search"></i></button>
-						</form>
-					</div> <!-- .main-navigation -->
+            <div class="main-navigation">
+                <button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
+                <ul class="menu">
+                    <li class="menu-item current-menu-item"><a href="/">Главная</a></li>
+                    <li class="menu-item"><a href="/about">О нас</a></li>
+                    <li class="menu-item"><a href="/review">Фильмы</a></li>
+                    <li class="menu-item"><a href="/joinus">Присоединится к нам</a></li>
+                    <li class="menu-item"><a href="/contact">Контакты</a></li>
+                </ul> <!-- .menu -->
 
-					<div class="mobile-navigation"></div>
-				</div>
-			</header>
-			<main class="main-content">
-				<div class="container">
-					<div class="page">
-						<div class="breadcrumbs">
-							<a href="/">Home</a>
-							<span>Movie Review</span>
-						</div>
+                <form action="#" class="search-form">
+                    <input type="text" placeholder="Search...">
+                    <button><i class="fa fa-search"></i></button>
+                </form>
+            </div> <!-- .main-navigation -->
 
-						<div class="filters">
-							<select name="#" id="#" placeholder="Choose Category">
-								<option value="#">Action</option>
-								<option value="#">Drama</option>
-								<option value="#">Fantasy</option>
-								<option value="#">Horror</option>
-								<option value="#">Adventure</option>
-							</select>
-							<select name="#" id="#">
-								<option value="#">2012</option>
-								<option value="#">2013</option>
-								<option value="#">2014</option>
-							</select>
-						</div>
-						<div class="movie-list">
-							<div class="movie">
-								<figure class="movie-poster"><img src="../static/images/thumb-3.jpg" alt="#"></figure>
-								<div class="movie-title"><a href="/single">Maleficient</a></div>
-								<p>Sed ut perspiciatis unde omnis iste natus error voluptatem doloremque.</p>
-							</div>
-							<div class="movie">
-								<figure class="movie-poster"><img src="../static/images/thumb-4.jpg" alt="#"></figure>
-								<div class="movie-title"><a href="/single">The adventure of Tintin</a></div>
-								<p>Sed ut perspiciatis unde omnis iste natus error voluptatem doloremque.</p>
-							</div>
-							<div class="movie">
-								<figure class="movie-poster"><img src="../static/images/thumb-5.jpg" alt="#"></figure>
-								<div class="movie-title"><a href="/single">Hobbit</a></div>
-								<p>Sed ut perspiciatis unde omnis iste natus error voluptatem doloremque.</p>
-							</div>
-							<div class="movie">
-								<figure class="movie-poster"><img src="../static/images/thumb-6.jpg" alt="#"></figure>
-								<div class="movie-title"><a href="/single">Exists</a></div>
-								<p>Sed ut perspiciatis unde omnis iste natus error voluptatem doloremque.</p>
-							</div>
-							<div class="movie">
-								<figure class="movie-poster"><img src="../static/images/thumb-1.jpg" alt="#"></figure>
-								<div class="movie-title"><a href="/single">Drive hard</a></div>
-								<p>Sed ut perspiciatis unde omnis iste natus error voluptatem doloremque.</p>
-							</div>
-							<div class="movie">
-								<figure class="movie-poster"><img src="../static/images/thumb-2.jpg" alt="#"></figure>
-								<div class="movie-title"><a href="/single">Robocop</a></div>
-								<p>Sed ut perspiciatis unde omnis iste natus error voluptatem doloremque.</p>
-							</div>
-							<div class="movie">
-								<figure class="movie-poster"><img src="../static/images/thumb-7.jpg" alt="#"></figure>
-								<div class="movie-title"><a href="/single">Life of Pi</a></div>
-								<p>Sed ut perspiciatis unde omnis iste natus error voluptatem doloremque.</p>
-							</div>
-							<div class="movie">
-								<figure class="movie-poster"><img src="../static/images/thumb-8.jpg" alt="#"></figure>
-								<div class="movie-title"><a href="/single">The Colony</a></div>
-								<p>Sed ut perspiciatis unde omnis iste natus error voluptatem doloremque.</p>
-							</div>
-						</div> <!-- .movie-list -->
+            <div class="mobile-navigation"></div>
+        </div>
+    </header>
+    <main class="main-content">
+        <div class="container">
+            <div class="page">
+                <div class="breadcrumbs">
+                    <a href="/">Главная</a>
+                    <span>Фильмы</span>
+                </div>
+
+                <div class="filters">
+                    <select name="genre" id="genre" placeholder="Выбери жанр" onchange="movies_f()">
+                        <option value="any">----</option>
+                        {% for genre in genres %}
+                        {% if genre.name == user_genre %}
+                        <option value="{{genre.name}}" selected>{{genre.name}}</option>
+                        {% else %}
+                        <option value="{{genre.name}}">{{genre.name}}</option>
+                        {% endif %}
+                        {% endfor %}
+                    </select>
+                    <select name="country" id="country" placeholder="Выбери страну" onchange="movies_f()">
+                        <option value="any">----</option>
+                        {% for country in countries %}
+                        {% if country.name != "No data" %}
+                        {% if country.name == user_county %}
+                        <option value="{{country.name}}" selected>{{country.name}}</option>
+                        {% else %}
+                        <option value="{{country.name}}">{{country.name}}</option>
+                        {% endif %}
+                        {% endif %}
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="movie-list">
+                    {% for movie in movies%}
+                    <div class="movie">
+                        <figure class="movie-poster"><img src="{{movie.poster}}" alt="#"></figure>
+                        <div class="movie-title"><a href="/single/{{movie.kinopoisk_id}}">{{movie.name}}</a></div>
+                        <p>{{movie.description}}</p>
+                    </div>
+                    {% endfor %}
+                </div> <!-- .movie-list -->
 
 						<div class="pagination">
 							<a href="#" class="page-number prev"><i class="fa fa-angle-left"></i></a>
 							<span class="page-number current">1</span>
-							<a href="#" class="page-number">2</a>
-							<a href="#" class="page-number">3</a>
-							<a href="#" class="page-number">4</a>
-							<a href="#" class="page-number">5</a>
-							<a href="#" class="page-number next"><i class="fa fa-angle-right"></i></a>
+							<a onclick="movies_f(1)" class="page-number">2</a>
+							<a onclick="movies_f(2)" class="page-number">3</a>
+							<a onclick="movies_f(3)" class="page-number">4</a>
+							<a onclick="movies_f(4)" class="page-number">5</a>
+							<a  class="page-number next"><i class="fa fa-angle-right"></i></a>
 						</div>
 					</div>
 				</div> <!-- .container -->
@@ -195,19 +172,19 @@
 						</div>
 					</div> <!-- .row -->
 
-					<div class="colophon">Copyright 2014 Company name, Designed by Themezy. All rights reserved</div>
-				</div> <!-- .container -->
+            <div class="colophon">Copyright 2014 Company name, Designed by Themezy. All rights reserved</div>
+        </div> <!-- .container -->
 
-			</footer>
-		</div>
-		<!-- Default snippet for navigation -->
-		
+    </footer>
+</div>
+<!-- Default snippet for navigation -->
 
 
-		<script src="../static/js/jquery-1.11.1.min.js"></script>
-		<script src="../static/js/plugins.js"></script>
-		<script src="../static/js/app.js"></script>
-		
-	</body>
+<script src="../static/js/jquery-1.11.1.min.js"></script>
+<script src="../static/js/plugins.js"></script>
+<script src="../static/js/app.js"></script>
+<script src="../static/js/script.js"></script>
+
+</body>
 
 </html>
