--- a/movies_app/templates/index.html
+++ b/movies_app/templates/index.html
@@ -61,7 +61,7 @@
                         <div class="slider">
                             <ul class="slides">
                                 {%for movie in movies%}
-                                    <li><a href="single/{{movie.kinopoisk_id}}"><img src="{{movie.poster}}"></img></a></li>
+                                <li><a href="single/{{movie.kinopoisk_id}}"><img src="{{movie.poster}}"></a></li>
                                 {% endfor %}
                            </ul>
                         </div>
