commit by ilyas

--- a/movies_app/templates/review.html
+++ b/movies_app/templates/review.html
@@ -99,8 +99,9 @@
 
 						<div class="pagination">
 							<a href="#" class="page-number prev"><i class="fa fa-angle-left"></i></a>
-							<span class="page-number current">1</span>
-							<a onclick="movies_f(1)" class="page-number">2</a>
+<!--							<span class="page-number current">1</span>-->
+							<a href="/review/?genre={{user_genre}}&country={{user_country}}&page={{0}}" class="page-number current">1</a>
+                            <a onclick="movies_f(1)" class="page-number">2</a>
 							<a onclick="movies_f(2)" class="page-number">3</a>
 							<a onclick="movies_f(3)" class="page-number">4</a>
 							<a onclick="movies_f(4)" class="page-number">5</a>
