edit static roots and update DB

--- a/movies_app/templates/single.html
+++ b/movies_app/templates/single.html
@@ -50,7 +50,7 @@
                     <input type="text" placeholder="Поиск...">
                     <button><i class="fa fa-search"></i></button>
                 </form>
-                n><i class="fa fa-search"></i></button>
+                <i class="fa fa-search"></i></button>
                 </form>
             </div> <!-- .main-navigation -->
 
