--- a/movies_app/templates/joinus.html
+++ b/movies_app/templates/joinus.html
@@ -31,7 +31,7 @@
 					<a href="/" id="branding">
 						<img src="../static/images/logo.png" alt="" class="logo">
 						<div class="logo-copy">
-							<h1 class="site-title">Company Name</h1>
+							<h1 class="site-title">{{title}}</h1>
 							<small class="site-description">Tagline goes here</small>
 						</div>
 					</a> <!-- #branding -->
