--- a/movies_app/templates/single.html
+++ b/movies_app/templates/single.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
-    <title>Кинопоисковик | {{movie.name}}</title>
+    <title>{{title}} | {{movie.name}}</title>
 
     <!-- Loading third party fonts -->
     <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
@@ -31,7 +31,7 @@
             <a href="/" id="branding">
                 <img src="../static/images/logo.png" alt="" class="logo">
                 <div class="logo-copy">
-                    <h1 class="site-title">Кинопоисковик</h1>
+                    <h1 class="site-title">{{title}}</h1>
                     <small class="site-description">by 231-363/364</small>
                 </div>
             </a> <!-- #branding -->
