--- a/movies_app/templates/single.html
+++ b/movies_app/templates/single.html
@@ -12,7 +12,7 @@
     <link href="../static/fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Loading main css file -->
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/main.css">
 
     <!--[if lt IE 9]>
     <script src="../static/js/ie-support/html5.js"></script>
@@ -39,7 +39,7 @@
             <div class="main-navigation">
                 <button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
                 <ul class="menu">
-                    <li class="menu-item current-menu-item"><a href="/">Главная</a></li>
+                    <li class="menu-item"><a href="/">Главная</a></li>
                     <li class="menu-item"><a href="/about">О нас</a></li>
                     <li class="menu-item"><a href="/review">Фильмы</a></li>
                     <li class="menu-item"><a href="/joinus">Присоединится к нам</a></li>
