--- a/movies_app/static/main.css
+++ b/movies_app/static/main.css
@@ -2338,3 +2338,35 @@ ul.arrow li a:hover {
     padding-top: 30px;
 }
 
+.movie-rating {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.rating-stars {
+  display: flex;
+  align-items: center;
+  margin-right: 1rem;
+}
+
+.star {
+  display: inline-block;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-color: #ccc;
+  border-radius: 50%;
+  margin-right: 0.25rem;
+  box-sizing: border-box;
+  transition: background-color 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.star.active {
+  background-color: #ff8000;
+}
+
+.rating-value {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
