--- a/movies_app/templates/review.html
+++ b/movies_app/templates/review.html
@@ -46,10 +46,10 @@
                     <li class="menu-item"><a href="/contact">Контакты</a></li>
                 </ul> <!-- .menu -->
 
-                <form action="#" class="search-form">
-                    <input type="text" placeholder="Search...">
-                    <button><i class="fa fa-search"></i></button>
-                </form>
+                <div class="search-form active" id="searchForm">
+                    <input class="active" type="text" name="search" id="searchFormInput" placeholder="Поиск...">
+                    <button class="active" type="button" onclick="movies_f()"><i class="fa fa-search"></i></button>
+                </div>
             </div> <!-- .main-navigation -->
 
             <div class="mobile-navigation"></div>
